# CellCount

./: CMakeLists.txt  CellCount.sln  README.md  Results.xlsx
CellCount/: CellCount.vcxproj  CellCount.vcxproj.filters  ImageProcess.cpp  ImageProcess.h  Main.cpp
CellCount/x64/Debug/: vc140.idb
CellCount/x64/Debug/CellCount.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CellCount.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CellCount.sln  CellCount.vcxproj  CellCount.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
x64/Debug/: CellCount.ilk
